# yeehaw

./: .gitignore  AGENTS.md  IMPLEMENTATION.md  Makefile  README.md  go.mod  go.sum  pyproject.toml
ARCHITECTURE/: 01-overview.md  02-store.md  03-git-worktrees.md  04-tmux.md  05-agent-profiles.md  06-roadmap-format.md  07-signal-protocol.md  08-orchestrator.md  09-mcp-server.md  09-tui.md  10-edge-cases.md  11-testing.md  12-extensions.md
cmd/yeehaw/: main.go  roadmap.go  run.go  scheduler.go  status.go  tui.go
docs/: rfc-v2.md
docs/plans/: demo-roadmap.md  extension-roadmap.md
docs/reports/: 2026-03-03_report.md
internal/agent/: agent.go  agent_test.go
internal/git/: git.go  git_test.go
templates/: guidelines.example.md  roadmap.example.md  roadmap.example.yaml
tests/: conftest.py  test_agent.py  test_agents_main_init.py  test_cli.py  test_cli_more.py  test_coach.py  test_config.py  test_context.py  test_db.py  test_git.py  test_git_repo.py  test_hooks.py  test_importer.py  test_integration_cli.py  test_main_module.py  test_mcp.py  test_mcp_more.py  test_merge_resolver.py  test_notifications.py  test_orchestrator.py  test_planner.py  test_planner_generate.py  test_policy.py  test_roadmap.py  test_runner.py  test_schema_migration.py  test_scm.py  test_signal.py  test_store.py  test_tmux.py  test_tui.py  test_v2_batch_workflow.py  test_v2_control_plane.py  test_v2_tui_metrics.py  test_v2_usage_parser.py  test_worker_runtime_config.py
yeehaw/: __init__.py  agents.py  cli.py  coach.py  db.py  git_repo.py  importer.py  orchestrator.py  roadmap.py  runner.py  tmux.py  tui.py
yeehaw_v2/: __init__.py  cli.py  config.py  control_plane.py  editor_bridge.py  models.py  roadmap_workflow.py  store.py  tui.py  usage_parser.py
(+79 files in other folders)
