[project]
name = "yeehaw"
version = "0.1.0"
description = "Multi-agent coding orchestrator CLI"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "watchdog>=4.0",
]

[project.scripts]
yeehaw = "yeehaw.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yeehaw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring git or tmux (deselect with '-m not integration')",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
